Fix bug 206269 "An escaping problem also occurs with '&' in subject or

body."

BUG: 206269
FIXED-IN: 5.17.2